@@ -34,6 +34,7 @@ public class PropertyDescriptorTableModel
     /**
      * Set the table model to represents the properties of the object.
      */
+    @Override
     public void setObject(Object layout) {
         super.setObject(layout);
 
@@ -53,6 +54,7 @@ public class PropertyDescriptorTableModel
      * @param row table row
      * @param col table column
      */
+    @Override
     public boolean isCellEditable(int row, int col) {
         if (col == JPropertyEditorTable.COL_VALUE) {
             return true;
@@ -66,6 +68,7 @@ public class PropertyDescriptorTableModel
      * @param row table row
      * @param col table column
      */
+    @Override
     public Object getValueAt(int row, int col) {
 
         Object value = null;
@@ -84,7 +87,7 @@ public class PropertyDescriptorTableModel
                 try {
                     for (int i = 0; i < paramTypes.length; i++) {
                         // XXX - debug
-                        args[i] = paramTypes[i].newInstance();
+                        args[i] = paramTypes[i].getDeclaredConstructor().newInstance();
                         throw new IllegalStateException(
                             "getValueAt getter = " + getter +
                             " parameter = " + paramTypes[i]);
@@ -119,6 +122,7 @@ Debug.println(Level.INFO, "LayoutManager: " + bean.toString());
     /**
      * Set the value of the Values column.
      */
+    @Override
     public void setValueAt(Object value, int row, int column) {
 
         if (column != JPropertyEditorTable.COL_VALUE ||
@@ -135,7 +139,7 @@ Debug.println(Level.INFO, "LayoutManager: " + bean.toString());
 Debug.println(Level.INFO, e);
 Debug.println(Level.INFO, descriptors[row].getShortDescription());
 Debug.println(Level.INFO, "Setter: " + setter);
-Debug.println(Level.INFO, "Argument: " + value.getClass().toString());
+Debug.println(Level.INFO, "Argument: " + value.getClass());
 Debug.println(Level.INFO, "Row: " + row + " Column: " + column);
             }
         }
@@ -153,6 +157,7 @@ Debug.println(Level.INFO, "Row: " + row + " Column: " + column);
     /**
      * Returns the Java type info for the property at the given row.
      */
+    @Override
     public Class<?> getPropertyType(int row) {
         return getPropertyDescriptor(row).getPropertyType();
     }
@@ -162,6 +167,7 @@ Debug.println(Level.INFO, "Row: " + row + " Column: " + column);
      * editor is not specified in the property descriptor then it is looked up
      * in the PropertyEditorManager.
      */
+    @Override
     public Class<?> getPropertyEditorClass(int row) {
         return getPropertyDescriptor(row).getPropertyEditorClass();
     }
@@ -170,11 +176,10 @@ Debug.println(Level.INFO, "Row: " + row + " Column: " + column);
      * Special case for the enumerated properties.
      * Must reinitialize to reset the combo box values. TODO
      */
+    @Override
     public void initPropertyEditor(PropertyEditor editor, int row) {
         if (editor instanceof SwingEditorSupport)  {
             ((SwingEditorSupport) editor).init(getPropertyDescriptor(row));
         }
     }
 }
-
-/* */
